# plunk

./: .gitignore  README.md  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docsrc/: table_of_contents.rst
plunk/ap/: snippets.py  wav_encode.py
plunk/ap/app4_drill_but_make_it_slabsiter/: .gitignore  app.py  app4_drill.py  audio_store.py  components.py  file_store.py  si_model.py  slabsiter_drill_app.py
plunk/ap/live_graph/: audio_store.py  live_graph.py  live_graph_data_buffer.py  live_graph_streamlitfront.py
plunk/ap/notebooks/: simple_two_way_py_js.ipynb
plunk/ap/package_dpp/: MANIFEST.in  README.md  pack.py  setup.cfg  setup.py
plunk/ap/package_dpp/dummy_dpp/: setup.cfg  setup.py
plunk/ap/package_dpp/dummy_dpp/dummy_dpp/: __init__.py
plunk/ap/package_dpp/simple_dpp/: __init__.py
plunk/ap/package_dpp/test_dpp/: dpp.py  helloworld.pkl
plunk/ap/pain/: context_func.py  delegated_attribute_not_callable.py  wrap_kvs_and_self.py
plunk/ca/: band_projection_matrix.py  chained_spectral_projector.py  linalg_utils.py  pair_wise_lda.py  pseudo_lda.py  pseudo_pca.py  test_chained_spectral_projection.py  test_linalg_utils.py
plunk/sb/: S_801_testing_Andie_serializePPP.ipynb  call_graph_outgoing.dot
plunk/tw/: crude_and_selectbox_bug.py  crude_and_selectbox_bug_api.py  echoed_clicks.py  empty_sentinel_options.py  ipython_magic.py  mov_to_transcription.py  potentially_useful_utils.py  routing.py  scrap.py  things_decorators_break.py  user_story_to_poc_demo.py
plunk/vf/: decorators.py  dummy_dpp.py  notebook.ipynb
(+1406 files in other folders)
