[metadata]
name = plunk
version = 0.1.108
url = https://github.com/otosense/plunk
platforms = any
description_file = README.md
root_url = https://github.com/otosense/
license = apache-2.0
author = OtoSense
description = Dump of disorganized ML tools -- the place where homeless code goes until a home is found
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = plunk

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
