[metadata]
name = simple_dpp
version = 1.0.0
url = https://github.com/otosense/
platforms = any
description_file = README.md
root_url = https://github.com/otosense/
license = None
author = Andie Shining Phan
author_email = andie.phan@analog.com
description = Simple Data Processing Pipeline
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
display_name = Simple Data Processing Pipeline

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    olab @ git+ssh://git@github.com/otosense/olab.git
    PySoundFile
    numpy
    meshed
