[metadata]
name = dummy_dpp
version = 1.0.0
url = https://github.com/otosense/isee
platforms = any
description_file = README.md
root_url = https://github.com/otosense/
license = None
author = isee
author_email = andie.phan@analog.com
description = dummy_dpp
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    isee
